<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:baselineAligned="false"
    android:orientation="vertical"
    android:padding="20dp"
    android:scrollbarAlwaysDrawHorizontalTrack="false"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    tools:context=".view.PerformerDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!-- Musician header: image, name and birthDate -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <ImageView
                android:id="@+id/performer_detail_image"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:layout_gravity="left"
                android:adjustViewBounds="true"
                android:maxHeight="200dp"
                tools:ignore="ImageContrastCheck"
                tools:src="@drawable/app_logo" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <TextView
                    android:id="@+id/performer_detail_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="32sp"
                    android:textStyle="bold"
                    tools:text="Musician name" />

                <TextView
                    android:id="@+id/performer_detail_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="true"
                    android:textAlignment="center"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/gray_subtitle"
                    tools:text="1957-01-01" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/performer_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="4"
            android:maxLines="8"
            android:enabled="true"
            android:textSize="16sp"
            android:textStyle="normal"
            tools:text="performer description" />

        <TextView
            android:id="@+id/tracks_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@null"
            android:enabled="true"
            android:text="@string/performer_detail_list_album_title"
            android:textColor="@color/main_orange"
            android:textSize="20sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/performer_detail_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="auto"
            android:persistentDrawingCache="all"
            android:scrollbars="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            tools:listitem="@layout/album_item" />
    </LinearLayout>
</FrameLayout>