...
            android:maxHeight="300dp"
            tools:ignore="ImageContrastCheck"
            tools:src="@drawable/app_logo" />

        <!-- Artist name full width, turns into two lines if too long -->
        <TextView
            android:id="@+id/artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:enabled="true"
            android:maxLines="2"
            android:textAlignment="center"
...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/album_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:enabled="true"
                android:textColor="@color/black"
                android:textSize="20sp"
...
