...
        android:padding="0pt"
        android:scaleType="centerInside"
        android:src="@drawable/album"
        android:tint="#929292" />

    <ImageButton
        android:id="@+id/buttonIconArtists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@null"
        android:contentDescription="@string/artists_button_description"
        android:padding="0pt"
...
